AUTOMAKE_OPTIONS = foreign

SUBDIRS=@STDIO_TOOLS@ @TTF_TOOLS@ @MINIGUI_TOOLS@
DIST_SUBDIRS = res common \
               font-tools tools mgcfg-trans inner-res-trans ngux-tools product-id \
               rbfeditor vbfeditor qpfeditor upfeditor image-dumper \
               ttf2qpf ttf2upf bdf2upf bdf2rbf cryptool
               
