INCLUDES=-I../common

bin_PROGRAMS= vbf2c  bdf2vbf  qpf2upf  upf2c upfmerge upfbbox upfdump upfmetrics

vbf2c_SOURCES= vbf2c.c

bdf2vbf_SOURCES=bdf2vbf.c

qpf2upf_SOURCES= qpf2upf.c

upf2c_SOURCES= upf2c.c

upfmerge_SOURCES= upfmerge.c

upfbbox_SOURCES= upfbbox.c

upfdump_SOURCES= upfdump.c

upfmetrics_SOURCES= upfmetrics.c

