bin_PROGRAMS=rbfeditor

rbfeditor_SOURCES=rbfeditor.c readrbf.c charset.c charset-arabic.c \
                  big5unimap.c euckrunimap.c gbkunimap.c gbunimap.c \
                  sjisunimap.c ujisunimap.c \
                  rbf.h charset.h gunicode.h gunichartables.h \
                  my_debug.h

rbfeditor_LDADD=@MINIGUI_LIBS@ -lmgutils
